--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200..1000&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #fff;
+}
+
+.dark body {
+    background-color: #121212;
+}
+
+.dark .toggle {
+    --tglbg: #121212;
 }
